--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Wifi Fingerprinting</string>
+    <string name="textView1">Hello World!</string>
+    <string name="button1">Click Me!</string>
+    <string name="clickResponse">You Clicked!</string>
 </resources>
