--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Wifi Fingerprinting</string>
     <string name="textView1">Hello!</string>
     <string name="button1">Scan</string>
+    <string name="scanCount">"Scan Count: "</string>
 </resources>
