Raw and average data is now saved in a csv file.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="textView1">Hello!</string>
     <string name="button1">Scan</string>
     <string name="scanCount">"Scan Count: "</string>
+    <string name="label">Label</string>
 </resources>
